fix: modal overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 
 html{
     height: 100%;
+    
     background-image: url("../assets/background.png");
         background-position: center;
         background-repeat: no-repeat;
@@ -123,7 +124,7 @@ html{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 6; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 20px;
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -136,6 +137,7 @@ html{
   
   /* Modal Content */
   .modal-content {
+      margin: 10px;
       border-radius: 10px;
     background-color: #fefefe;
     margin: auto;
